# rust_api_rocket_postgres

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/2023-09-16-172034_create_crates/: up.sql
migrations/2023-09-27-153312_create_users/: up.sql
migrations/2023-09-27-153318_create_roles/: up.sql
migrations/2023-09-27-153326_create_users_roles/: up.sql
src/: auth.rs  commands.rs  main.rs  models.rs  repositories.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
