[package]
name = "rust_database_for_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_postgres_pool"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
chrono = {version = "0.4", features = ["serde"] }
log = "0.4"
clap = "4.2"
argon2 = "0.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"]}